--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,3 +2,16 @@
   max-width: 880px;
   margin: 45px auto 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .header {
+    max-width: 320px;
+    margin: 0;
+  }
+}
