--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,11 @@
   color: #000000;
   margin: 34px auto 54px 36px;
 }
+
+@media screen and (max-width: 425px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin: 25px auto 75px;
+  }
+}
