--- a/blocks/add-btn/add-btn.css
+++ b/blocks/add-btn/add-btn.css
@@ -3,5 +3,14 @@
   height: 50px;
   background-color: #000;
   border: 2px solid white;
-  border-radius: 5%;
+  border-radius: 2px;
+  background-image: url(../../images/add-btn.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 425px) {
+  .add-btn {
+    width: 282px;
+  }
 }
