--- a/blocks/card/__like-btn/card__like-btn.css
+++ b/blocks/card/__like-btn/card__like-btn.css
@@ -1,8 +1,10 @@
 .card__like-btn {
   width: 22px;
   height: 19px;
-  margin: 0 30px 0 0;
-  padding: 0;
+  margin: 0 20px 0 0;
   background-color: #fff;
   border: none;
+  background-image: url(../../../images/like.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
