--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -2,9 +2,9 @@
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 1.2;
+  line-height: 29px;
   color: #000000;
-  margin: 25px 0 32px 21px;
+  margin: 25px 0 25px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
