--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -4,3 +4,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 425px) {
+  .card {
+    margin: 0 auto;
+  }
+}
