--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -3,3 +3,9 @@
   border-bottom: 1px solid #545454;
   opacity: 0.7;
 }
+
+@media screen and (max-width: 425px) {
+  .header__line {
+    max-width: 320px;
+  }
+}
