--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,3 +7,9 @@
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
 }
+
+@media screen and (max-width: 425px) {
+  .popup__container {
+    width: 282px;
+  }
+}
