--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -9,3 +9,10 @@
   color: #000;
   padding-bottom: 10px;
 }
+
+@media screen and (max-width: 425px) {
+  .popup__name {
+    margin: 0 22px 30px;
+    padding-bottom: 7px;
+  }
+}
