--- a/blocks/popup/__profession/popup__profession.css
+++ b/blocks/popup/__profession/popup__profession.css
@@ -9,3 +9,10 @@
   color: #000;
   padding-bottom: 10px;
 }
+
+@media screen and (max-width: 425px) {
+  .popup__profession {
+    margin: 0 22px 45px;
+    padding-bottom: 7px;
+  }
+}
