--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,3 +4,9 @@
   border-radius: 50%;
   margin: 0 30px 0 0;
 }
+
+@media screen and (max-width: 425px) {
+  .profile__avatar {
+    margin: 42px auto 26px;
+  }
+}
