--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,3 +1,10 @@
 .profile__container {
   display: flex;
 }
+
+@media screen and (max-width: 425px) {
+  .profile__container {
+    max-width: 320px;
+    flex-direction: column;
+  }
+}
