--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -6,3 +6,12 @@
   color: #ffffff;
   margin: 0;
 }
+
+@media screen and (max-width: 425px) {
+  .profile__profession {
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin-left: -27px;
+  }
+}
