--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,17 @@
   justify-content: space-between;
   margin: 0 auto 50px;
 }
+
+@media screen and (max-width: 768px) {
+  .profile {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .profile {
+    max-width: 320px;
+    flex-direction: column;
+    margin: 0 auto 36px;
+  }
+}
