--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -8,6 +8,8 @@
   background-position: center;
   background-color: rgba(0, 0, 0, 0);
   border: 0;
+  cursor: pointer;
+  transition: opacity;
 }
 
 @media screen and (max-width: 425px) {
@@ -17,4 +19,8 @@
     width: 20px;
     height: 20px;
   }
+}
+
+.popup__close-btn:hover {
+  opacity: 0.6;
 }
