--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -6,6 +6,8 @@
   background-image: url(../../../images/edit-btn.svg);
   background-position: center;
   background-repeat: no-repeat;
+  transition: opacity;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 425px) {
@@ -13,4 +15,8 @@
     width: 18px;
     height: 18px;
   }
+}
+
+.profile__edit-btn:hover {
+  opacity: 0.6;
 }
