--- a/blocks/card/__like-btn/card__like-btn.css
+++ b/blocks/card/__like-btn/card__like-btn.css
@@ -1,10 +1,9 @@
 .card__like-btn {
   width: 22px;
   height: 19px;
-  margin: 0 20px 0 0;
+  margin: 0 20px 0 20px;
   background-color: #fff;
   border: none;
-  background-image: url(../../../images/like.svg);
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url(../../../images/like.svg) center no-repeat;
+  background-size: 100%;
 }
