--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,5 @@
 @import url(../blocks/popup/__profession/popup__profession.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_type/popup_type_active.css);
+@import url(../blocks/popup/_type/popup_type_inactive.css);
