--- a/blocks/card/__like-btn/card__like-btn.css
+++ b/blocks/card/__like-btn/card__like-btn.css
@@ -6,4 +6,10 @@
   border: none;
   background: url(../../../images/like.svg) center no-repeat;
   background-size: 100%;
+  padding: 11px;
+  transition: opacity;
+}
+
+.card__like-btn:hover {
+  opacity: 0.5;
 }
