--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,17 +1,18 @@
 .header {
   max-width: 880px;
   margin: 45px auto 40px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .header {
     max-width: 581px;
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .header {
-    max-width: 320px;
+    max-width: 600px;
     margin: 0;
   }
 }
