--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -2,9 +2,10 @@
   display: flex;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .profile__container {
     max-width: 320px;
     flex-direction: column;
+    align-items: center;
   }
 }
