--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,7 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_type/popup_type_active.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 
 @import url(../blocks/viewer/__container/viewer__container.css);
 @import url(../blocks/viewer/__img/viewer__img.css);
