--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,8 @@
 @import url(../blocks/popup/_type/popup_type_active.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_type/popup__input-error_type_active.css);
 
 @import url(../blocks/viewer/__container/viewer__container.css);
 @import url(../blocks/viewer/__img/viewer__img.css);
