--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,9 +1,11 @@
 .popup__input-error {
+    font-weight: 400;
     font-size: 12px;
-    color: red;
-    opacity: 0;
-    position: relative;
-    top: calc(100% + 6px);
-    left: 0;
-    transition: 0.3s;
+    line-height: 15px;
+    color: #FF0000;
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    width: 80%;
+
 }
