--- a/pages/index.css
+++ b/pages/index.css
@@ -42,6 +42,10 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input-error/_type/popup__input-error_type_active.css);
+@import url(../blocks/popup/__submit/_type/popup__submit_type_inactive.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__fieldset/popup__fieldset.css);
+
 
 @import url(../blocks/viewer/__container/viewer__container.css);
 @import url(../blocks/viewer/__img/viewer__img.css);
