--- a/pages/index.css
+++ b/pages/index.css
@@ -50,3 +50,4 @@
 @import url(../blocks/viewer/__container/viewer__container.css);
 @import url(../blocks/viewer/__img/viewer__img.css);
 @import url(../blocks/viewer/__title/viewer__title.css);
+@import url(../blocks/viewer/viewer.css);
