--- a/blocks/popup/__input/_type/popup__input_type_name.css
+++ b/blocks/popup/__input/_type/popup__input_type_name.css
@@ -1,9 +1,3 @@
 .popup__input_type_name {
-  margin: 0 36px 30px;
-}
-
-@media screen and (max-width: 425px) {
-  .popup__input_type_name {
-    margin: 0 22px 30px;
-  }
+  margin: 0 0 35px;
 }
