--- a/blocks/popup/__input/_type/popup__input_type_profession.css
+++ b/blocks/popup/__input/_type/popup__input_type_profession.css
@@ -1,9 +1,9 @@
 .popup__input_type_profession {
-  margin: 0 36px 48px;
+  margin: 0 0 48px;
 }
 
 @media screen and (max-width: 425px) {
   .popup__input_type_profession {
-    margin: 0 22px 45px;
+    margin: 0 0 50px;
   }
 }
