--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,6 +1,6 @@
 .popup__submit {
-  margin: 0 36px 37px;
-  width: 358px;
+  margin: 0 0 37px;
+  /*width: 358px;*/
   height: 50px;
   font-style: normal;
   font-weight: normal;
@@ -13,12 +13,13 @@
   border: none;
   cursor: pointer;
   transition: opacity;
+  padding: 0;
 }
 
 @media screen and (max-width: 425px) {
   .popup__submit {
     width: 238px;
-    margin: 0 auto 25px;
+    margin: 0 0 25px;
     font-size: 14px;
     line-height: 17px;
   }
