--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,13 +4,13 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin: 34px auto 54px 36px;
+  margin: 34px auto 36px 0;
 }
 
 @media screen and (max-width: 425px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin: 25px auto 75px;
+    margin: 25px auto 75px 0;
   }
 }
