--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__profession/profile__profession.css);
 @import url(../blocks/profile/__add-btn/profile__add-btn.css);
+@import url(../blocks/profile/__edit-avatar-btn/profile__edit-avatar-btn.css);
 
 @import url(../blocks/cards-container/cards-container.css);
 
