--- a/main.css
+++ b/main.css
@@ -5,14 +5,15 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);margin:45px auto 40px;max-width:880px}@media screen and (max-width:900px){.header{max-width:581px}}@media screen and (max-width:600px){.header{margin:0;max-width:600px}}
 .header__logo{padding:0 0 40px}@media screen and (max-width:600px){.header__logo{height:25px;margin:28px auto 27px 27px;padding:0;width:104px}}
 .profile{align-items:center;display:flex;justify-content:space-between;margin:0 auto 50px;max-width:880px}@media screen and (max-width:900px){.profile{max-width:581px}}@media screen and (max-width:600px){.profile{flex-direction:column;margin:0 auto 36px;max-width:320px}}
-.profile__avatar{border-radius:50%;height:120px;margin:0 30px 0 0;width:120px}@media screen and (max-width:600px){.profile__avatar{margin:42px auto 26px}}
+.profile__avatar{border-radius:50%;height:120px;margin:0 30px 0 0;-o-object-fit:cover;object-fit:cover;width:120px}@media screen and (max-width:600px){.profile__avatar{margin:42px auto 26px}}
 .profile__btn-container{align-items:center;display:flex}
-.profile__container{display:flex}@media screen and (max-width:600px){.profile__container{align-items:center;flex-direction:column;max-width:320px}}
+.profile__container{display:flex;position:relative}@media screen and (max-width:600px){.profile__container{align-items:center;flex-direction:column;max-width:320px}}
 .profile__edit-btn{background-color:#000;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;cursor:pointer;height:24px;padding:11px;transition:opacity;width:24px}@media screen and (max-width:600px){.profile__edit-btn{height:18px;padding:9px;width:18px}}.profile__edit-btn:hover{opacity:.6}
 .profile__info{display:flex;flex-direction:column;justify-content:center;max-width:336px}@media screen and (max-width:600px){.profile__info{margin:0 auto 33px;max-width:282px}}
 .profile__name{color:#fff;font-size:42px;font-style:normal;font-weight:500;line-height:1.14;margin:0 18px 8px 0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:900px){.profile__name{font-size:34px}}@media screen and (max-width:600px){.profile__name{font-size:27px;line-height:33px;margin:0 10px 7px 0;text-align:center}}
 .profile__profession{color:#fff;font-size:18px;font-style:normal;font-weight:400;line-height:1.2;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:600px){.profile__profession{font-size:14px;line-height:17px;margin-left:-27px;text-align:center}}
 .profile__add-btn{background-color:#000;background-image:url(bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;height:50px;padding:0;transition:opacity;width:150px}@media screen and (max-width:600px){.profile__add-btn{width:282px}}.profile__add-btn:hover{opacity:.6}
+.profile__edit-avatar-btn{background-color:#000;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;left:0;opacity:0;padding:60px;position:absolute;top:0;transition:opacity}@media screen and (max-width:600px){.profile__edit-avatar-btn{top:42px}}.profile__edit-avatar-btn:hover{opacity:.6}
 .cards-container{-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:1fr 1fr 1fr;grid-template-rows:1fr 1fr;margin:0 auto 66px;max-width:880px;row-gap:20px}@media screen and (max-width:900px){.cards-container{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr 1fr;max-width:581px}}@media screen and (max-width:600px){.cards-container{grid-template-columns:1fr;margin:0 auto 48px;max-width:282px}}
 .card{display:flex;flex-direction:column;justify-content:space-between;position:relative;width:282px}@media screen and (max-width:425px){.card{margin:0 auto}}
 .card__heading{align-items:center;background-color:#fff;border-radius:0 0 10px 10px;display:flex;justify-content:space-between}
@@ -21,6 +22,8 @@
 .card__like-btn{background-color:#fff;background:url(1ad06e85f169668a1f36.svg) 50% no-repeat;background-size:100%;border:none;height:19px;margin:0 20px;padding:11px;transition:opacity;width:22px}.card__like-btn:hover{cursor:pointer;opacity:.5}
 .card__like-btn_active{background:url(dd6a61e81552be95f4b7.svg) 50% no-repeat}.card__like-btn_active:hover{cursor:pointer;opacity:1}
 .card__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:25px 0 25px 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__like-container{display:flex;flex-direction:column}
+.card__like-counter{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;text-align:center}
 .footer{margin:0 auto 60px;max-width:880px}@media screen and (max-width:900px){.footer{max-width:581px}}@media screen and (max-width:600px){.footer{margin:0 auto 36px;max-width:282px}}
 .footer__copyright{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:1.2;margin:0}@media screen and (max-width:600px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);height:100%;left:0;opacity:0;position:fixed;top:0;transition:visibility 0s,opacity .5s linear;visibility:hidden;width:100%;z-index:1}
