--- a/src/blocks/profile/__edit-avatar-btn/profile__edit-avatar-btn.css
+++ b/src/blocks/profile/__edit-avatar-btn/profile__edit-avatar-btn.css
@@ -7,6 +7,7 @@
     background-image: url(../../../images/edit-btn.svg);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 26px;
     transition: opacity;
     opacity: 0;
     cursor: pointer;
